Created new pages, modified others
Created Netherlands and New Zealand pages, modified Malaysia, Mexico, and Morocco pages

--- a/MoroccoGuide.html
+++ b/MoroccoGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Guide</title>
+<title>MoroccoGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -189,52 +189,57 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
+	<h1>Some Facts about Morocco</h1>
 	<p></p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>City</p>
+	<p>Marrakech</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $20 / day per person</li>
+		<li>Mid-Range: $53 /  day per person</li>
+		<li>High-Range: $152 / day per person</li>
 	</ul>
-	<p>City</p>
+	<p>Essaouira</p>
 	<ul>
-		<li>Budget: $ / day per person</li>
-		<li>Mid-Range: $ /  day per person</li>
-		<li>High-Range: $ / day per person</li>
+		<li>Budget: $15 / day per person</li>
+		<li>Mid-Range: $35 /  day per person</li>
+		<li>High-Range: $78 / day per person</li>
+	</ul>
+    <p>Agadir</p>
+	<ul>
+		<li>Budget: $18 / day per person</li>
+		<li>Mid-Range: $46 /  day per person</li>
+		<li>High-Range: $125 / day per person</li>
 	</ul>
 
-	<h1>Popular Cities in </h1>
+<h1>Popular Cities in Morocco</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Marrakech</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-		<h4></h4>
-        <p></p>
+		<img src = "Images/Morocco/" alt = "Koutoubia">
+		<h4>Koutoubia</h4>
+        <p>This building is the largest Mosque in Morocco being 253 feet tall and is considered 
+            a classic example of Moroccan Mosque architecture.
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
-	</div>
-	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "House of Photography in Marrakech">
+        <h4>House of Photography in Marrakech</h4>
+		<p>This place features about 10,000 documents and vintage photographs from 1870 to 
+            1960, with pictures of Moroccan landscapes, architecural complexes, and portraits.
+        </p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Essaouira</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images//" alt = "Azur Art and Spa">
+        <h4>Azur Art and Spa</h4>
+		<p>This spa includes</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images//" alt = "">
