--- a/NetherlandsGuide.html
+++ b/NetherlandsGuide.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MexicoGuide</title>
+<title>Guide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -189,62 +189,62 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Mexico</h1>
-	<p>Mexico is a country located in the southern part of North America. It is the 
-        third-largest country in Latin America and the 11th most populous country in 
-        the world, with over 130 million people. Mexico has a diverse landscape, including 
-        deserts, jungles, mountains, and beaches, and a rich cultural heritage that dates back 
-        to the ancient civilizations of the Aztecs and Maya. Spanish is the official language, and 
-        the currency is the mexican peso. Mexico is known for its delicious cuisince, including tacos, 
-        enchiladas, and guacamole, and its vibrant music and dance traditions, such as mariachi and 
-        salsa. Mexico's economy is the 15th largest in the world and is heavily dependent on exports, 
-        particularly to the United States.
-    </p>
+	<h1>Some Facts about Country</h1>
+	<p></p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>Cancun</p>
+	<p>City</p>
 	<ul>
-		<li>Budget: $40 / day per person</li>
-		<li>Mid-Range: $108 /  day per person</li>
-		<li>High-Range: $297 / day per person</li>
+		<li>Budget: $ / day per person</li>
+		<li>Mid-Range: $ /  day per person</li>
+		<li>High-Range: $ / day per person</li>
 	</ul>
-	<p>Mexico City</p>
+	<p>City</p>
 	<ul>
-		<li>Budget: $52 / day per person</li>
-		<li>Mid-Range: $145 /  day per person</li>
-		<li>High-Range: $486 / day per person</li>
+		<li>Budget: $ / day per person</li>
+		<li>Mid-Range: $ /  day per person</li>
+		<li>High-Range: $ / day per person</li>
 	</ul>
 
-<h1>Popular Cities in Mexico</h1>
+	<h1>Popular Cities in </h1>
 <br>
-<h3>Places to Visit in Cancun</h3>
+<h3>Places to Visit in </h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Mexico/ChichenItza.jpg" alt = "Chichen Itza">
-        <h4>Chichen Itza</h4>
-		<p>This prehistoric city was one of the largest Mayan cities to exist and is the 
-            most visited archeological site in Mexico
-        </p>
+		<img src = "Images//" alt = "">
+		<h4></h4>
+        <p></p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Mexico/PlayaDelfines.jpg" alt = "Playa Delfines">
-        <h4>Playa Delfines</h4>
-		<p>This beach is the largest beach in Cancun where you have the chance to spot 
-            dolphins due to how clear the waters are.
-        </p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
+	</div>
+	<div class = "1column">
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in Mexico City</h3>
+<h3>Places to Visit in </h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Mexico/AnthropologyMuseum.jpg" alt = "National Museum of Anthropology">
-        <h4>National Museum of Anthropology</h4>
-		<p>This museum features artifacts from Mexico's pre-Columbian heritage, like the Aztecs
-            Xochipilli statue and the Stone of the Sun.
-        </p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
+	</div>
+	<div class = "1column">
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
+	</div>
+	<div class = "1column">
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 </div>
 </div>
