--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -188,39 +188,80 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Brazil</h1>
+<p>Brazil is the fifth largest country in the world with a total area of over 8 million square kilometers. This country shares a boarder with 
+	every country in South America execpt Ecuador and Chile. Brazil's official language is Portuguese and has a population of approximately 
+	216 million people 
+	(as of 2023).
+	</p>
+	
+<p>Rio de Janeiro</p>
+<ul>
+	<li>Budget: $31 / day per person</li>
+	<li>Mid-Range: $82 /  day per person</li>
+	<li>High-Range: $221 / day per person</li>
+</ul>
+<p>São Paulo</p>
+<ul>
+	<li>Budget: $15 / day per person</li>
+	<li>Mid-Range: $41 / day per person</li>
+	<li>High-End: $117 / day per person</li>
+</ul>
+<p>Manaus</p>
+<ul>
+	<li>Budget: $45 / day per person</li>
+	<li>Mid-Range: $47 / day per person</li>
+	<li>High-End: $50 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Brazil</h1>
 <br>
 <h3>Places to Visit in Rio de Janeiro</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Brazil/ChristTheRedeemerImage.png" alt = "Christ the Redeemer" style = "height: 80% width: 75%">
-		<p>Christ The Redeemer Statue</p>
+		<h4>Christ The Redeemer Statue</h4>
+		<p>This giant statue of Jesus Christ stands on a 26 feet tall pedestal and is 98 feet tall and 92 feet 
+		long with its arms stretched.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Brazil/CopacabanaImage.png" alt = "Copacabana" style = "width: 75%">
-		<p>Copacabana</p>
+		<h4>Copacabana</h4>
+		<p>Located in the southern part of the city, this beach is 2.5 miles long and is one of the most 
+		famous beaches in the world.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Brazil/RioCarnival2023Image.png" alt = "Rio Carnival 2023" style = "width: 75%">
-		<p>Rio Carnival 2023</p>
+		<h4>Rio Carnival 2023</h4>
+		<p>Carnival is a festival held every year before Lent and is one of the biggest carnivals in the world.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in São Paulo</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Brazil/SaoPauloMuseumOfArt.jpg" alt = "São Paulo Museum of Art" style = "height: 100% width: 100%">
-		<p>São Paulo Museum of Art</p>
+		<h4>São Paulo Museum of Art</h4>
+		<p>This art museum contains modern art from all over Latin America, Africa, Asia, and Europe.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Brazil/MuseuDoFutebol.jpg" alt = "Museu do Futebol" style = "width: 75%">
-		<p>Museu do Futebol</p>
+		<h4>Museu do Futebol</h4>
+		<p>The Football (soccer) Museum is dedicated to the practice and history of football in Brazil and around the world.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Brazil/IbirapueraPark.jpg" alt = "Ibirapuera Park" style = "width: 75%">
-		<p>Ibirapuera Park</p>
+		<h4>Ibirapuera Park</h4>
+		<p>This urban park is the most visited park in South America and is often compared to Central Park in New York City.
+		<p/>
 	</div>
 </div>
 <br>
@@ -229,7 +270,8 @@
 <div class = "row">
 	<div class = "1column">
 		<img src = "Images/Brazil/AnavilhanasNationalPark.jpg" alt = "Anavilhanas National Park" style = "width: 25%">
-		<p>Anavilhanas National Park</p>
+		<h4>Anavilhanas National Park</h4>
+		<p>This nature reserve protects the Anavilhanas Archipelago in Rio Negro.</p>
 	</div>
 </div>
 </div>
