--- a/CanadaGuide.html
+++ b/CanadaGuide.html
@@ -189,44 +189,84 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Canada</h1>
+<p>Canada is the second largest country in the world with a total area of over 9 million square kilometers. This
+	country takes up two-fifths of the North American continent, but even with its large size it is one of the 
+	most sparsely populated countries in the world. Canada's official language is French and English and its population 
+	is over 37 million people.
+	</p>
+	
+<p>Banff</p>
+<ul>
+	<li>Budget: $29 / day per person</li>
+	<li>Mid-Range: $69 /  day per person</li>
+	<li>High-Range: $146 / day per person</li>
+</ul>
+<p>Montreal</p>
+<ul>
+	<li>Budget: $64 / day per person</li>
+	<li>Mid-Range: $167 / day per person</li>
+	<li>High-End: $425 / day per person</li>
+</ul>
+<p>Vancouver</p>
+<ul>
+	<li>Budget: $40 / day per person</li>
+	<li>Mid-Range: $115 / day per person</li>
+	<li>High-End: $335 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Canada</h1>
 <br>
 <h3>Places to Visit in Banff</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Canada/CaveBasinSite.jpg" alt = "Cave Basin Site" style = "height: 80% width: 75%">
-		<p>Cave and Basin National Historic Site</p>
+		<h4>Cave and Basin National Historic Site</h4>
+		<p>This site is located in the Canadian Rocky Mountains at the thermal mineral springs.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Canada/LakeMinnewanka.jpg" alt = "Lake Minnewanka" style = "width: 75%">
-		<p>Lake Minnewanka</p>
+		<h4>Lake Minnewanka</h4>
+		<p>This lake was known to the First Nations people as Minn-waki or “lake of the spirits” and can be 
+			explored by boat or on foot.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Montreal</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Canada/NotreDameBasilica.jpg" alt = "Notre-Dame Basilica" style = "height: 100% width: 100%">
-		<p>Notre-Dame Basilica of Montreal</p>
+		<h4>Notre-Dame Basilica of Montreal</h4>
+		<p>This was the first Gothic revival style church to be built in Canada.
+		</p>
 	</div>
 	<div class = "column">
 		<img src = "Images/Canada/Biodome.jpg" alt = "Biodome" style = "width: 75%">
-		<p>Biodome</p>
+		<h4>Biodome</h4>
+		<p>This facility allows you to walk through replicas of different ecosystems found in North and South America.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Vancouver</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Canada/VancouverAquarium.jpg" alt = "Vancouver Aquarium" style = "width: 75%">
-		<p>Vancouver Aquarium</p>
+		<h4>Vancouver Aquarium</h4>
+		<p>The Vancouver Aquarium was the first public aquarium to open in Canada.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Canada/CapilanoBridge.jpeg" alt = "Capilano Bridge" style = "width: 75%">
-		<p>Capilano Suspension Bridge Park</p>
+		<h4>Capilano Suspension Bridge Park</h4>
+		<p>This bridge crosses 230 feet above the Capilano River and is 460 feet long.
+		</p>
 	</div>
 </div>
 </div>
