--- a/ChinaGuide.html
+++ b/ChinaGuide.html
@@ -189,60 +189,109 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About China</h1>
+<p>China is the largest Asian country with a total area of over 9 million square kilometers. All the people living in this country
+	makes up one-fifth of all humans in the world, with a population of more than 1 billion people. China is one of the few existing 
+	countries in the world that have flourished economically and culturally in its early stages. Little to no outside influences 
+	had a large impact on China’s cultural development (with the expansion of Buddhism coming from India).
+</p>
+			
+<p>Beijing</p>
+<ul>
+	<li>Budget: $26 / day per person</li>
+	<li>Mid-Range: $65 /  day per person</li>
+	<li>High-Range: $160 / day per person</li>
+</ul>
+<p>Shanghai</p>
+<ul>
+	<li>Budget: $36 / day per person</li>
+	<li>Mid-Range: $97 / day per person</li>
+	<li>High-End: $279 / day per person</li>
+</ul>
+<p>Hong Kong</p>
+<ul>
+	<li>Budget: $55 / day per person</li>
+	<li>Mid-Range: $138 / day per person</li>
+	<li>High-End: $345 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in China</h1>
 <br>
 <h3>Places to Visit in Beijing</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/GreatWall.jpg" alt = "Great Wall of China" style = "height: 80% width: 75%">
-		<p>Great Wall of China</p>
+		<h4>Great Wall of China</h4>
+		<p>The Great Wall of China is a series of connected fortifications and served as protection of Imperial China 
+			from nomadic groups from the Eurasian Steppes.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/PalaceMuseum.jpg" alt = "The Palace Museum" style = "width: 75%">
-		<p>The Palace Museum</p>
+		<h4>The Palace Museum</h4>
+		<p>This museum houses about 700,000 pieces of Chinese artwork and artifacts.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/SummerPalace.jpg" alt = "Summer Palace" style = "width: 75%">
-		<p>Summer Palace</p>
+		<h4>Summer Palace</h4>
+		<p>This palace was once an imperial garden during the Qing dynasty but was destroyed during the Second Opium War of the 1850’s 
+			and was rebuilt to be a public park.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/TempleOfHeaven.jpg" alt = "Temple of Heaven" style = "width: 75%">
-		<p>Temple of Heaven</p>
+		<h4>Temple of Heaven</h4>
+		<p>This temple symbolizes the relationship between earth and heaven and is located in southern Beijing.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Shanghai</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/YuGarden.jpg" alt = "Yu Garden" style = "height: 100% width: 100%">
-		<p>Yu Garden</p>
+		<h4>Yu Garden</h4>
+		<p>This garden was first built during the Ming dynasty and is surrounded by the city god temple and Yuyuan Bazaar.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/ShanghaiMuseum.jpg" alt = "Shanghai Museum" style = "width: 75%">
-		<p>Shanghai Museum</p>
+		<h4>Shanghai Museum</h4>
+		<p>This museum is considered China’s first world-class modern museum and contains rare cultural pieces. 
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/PearlTVTower.jpg" alt = "Oriental Pearl TV Tower" style = "width: 75%">
-		<p>Oriental Pearl TV Tower</p>
+		<h4>Oriental Pearl TV Tower</h4>
+		<p>This tower has 15 observational levels with the highest being 1,150 feet above ground.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Hong Kong</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/NanLianGarden.jpg" alt = "Nan Lian Garden" style = "height: 100% width: 100%">
-		<p>Nan Lian Garden</p>
+		<h4>Nan Lian Garden</h4>
+		<p>This Tang dynasty style garden was a joint project between Chi Lin Nunnery and the Hong Kong government built in 2006.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/HongKongDisney.jpg" alt = "Hong Kong Disneyland" style = "width: 75%">
-		<p>Hong Kong Disneyland</p>
+		<h4>Hong Kong Disneyland</h4>
+		<p>This is the largest theme park in Hong Kong.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/China/TianTanBuddha.jpg" alt = "Tian Tan Buddha" style = "width: 75%">
-		<p>Tian Tan Buddha</p>
+		<h4>Tian Tan Buddha</h4>
+		<p>This bronze statue was built in 1993 and symbolizes the relationship between man and nature.
+		</p>
 	</div>
 </div>
 </div>
