--- a/CroatiaGuide.html
+++ b/CroatiaGuide.html
@@ -189,39 +189,72 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Croatia</h1>
+<p>Croatia has a population of more than 3 million people. Present day Croatia is comprised of the historically 
+	Croatian regions of Croatia-Slavonia, Itstria, and Dalmatia. The official language of this country is Croatian.
+	Croatia's culture is mostly Wetsern-oriented dispite the country having been under various foreign rule 
+	for centuries. Croatia’s European trajectory was recognized when the country joined the European Union in 2013.
+</p>
+			
+<p>Zagreb</p>
+<ul>
+	<li>Budget: $27 / day per person</li>
+	<li>Mid-Range: $65 /  day per person</li>
+	<li>High-Range: $141 / day per person</li>
+</ul>
+<p>Dubrovnik</p>
+<ul>
+	<li>Budget: $34 / day per person</li>
+	<li>Mid-Range: $82 / day per person</li>
+	<li>High-End: $190 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Croatia</h1>
 <br>
 <h3>Places to Visit in Zagreb</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Croatia/BrokenRelationships.jpg" alt = "Museum of Broken Relationships" style = "height: 80% width: 75%">
-		<p>Museum of Broken Relationships</p>
+		<h4>Museum of Broken Relationships</h4>
+		<p>This museum contains a collection of donated personal items devoted to failed relationships.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Croatia/CathedralOfZagreb.jpg" alt = "Cathedral of Zagreb" style = "width: 75%">
-		<p>Cathedral of Zagreb</p>
+		<h4>Cathedral of Zagreb</h4>
+		<p>This 12th century Neo Gothic cathedral is the second largest building in Croatia.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Croatia/FacultyOfScience.jpg" alt = "Botanical Garden of the Faculty of Science" style = "width: 75%">
-		<p>Botanical Garden of the Faculty of Science</p>
+		<h4>Botanical Garden of the Faculty of Science</h4>
+		<p>This facility is home to over 10,000 species of plants with 1,800 of them being exotic ones.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Dubrovnik</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Croatia/CableCar.jpg" alt = "Dubrovnik Cable Car" style = "height: 100% width: 100%">
-		<p>Dubrovnik Cable Car</p>
+		<h4>Dubrovnik Cable Car</h4>
+		<p>Takes passengers 778 meters to a plateau with a view of the city and restaurant.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Croatia/VirginMaryCathedral.jpg" alt = "The Cathedral of the Assumption of the Virgin Mary" style = "width: 75%">
-		<p>The Cathedral of the Assumption of the Virgin Mary</p>
+		<h4>The Cathedral of the Assumption of the Virgin Mary</h4>
+		<p>This cathedral church was built during the years 1642 and 1646 in the Baroque style.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Croatia/Lovrijenac.jpg" alt = "Lovrijenac" style = "width: 75%">
-		<p>Lovrijenac</p>
+		<h4>Lovrijenac</h4>
+		<p>This historical fortress is a theater and was built on top of a 37 feet high cliff.
+		</p>
 	</div>
 </div>
 </div>
