--- a/EgyptGuide.html
+++ b/EgyptGuide.html
@@ -188,52 +188,101 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Egypt</h1>
+<p>Egypt is home to the Nile River, the longest river in Africa, whose valley and delta was home to the major civilizations 
+	of the ancient Middle East and one of the world’s earliest urban and literate societies. Egypt has a population of over 
+	105 million people and the its official language is Arabic. Egypt’s location in the northeastern corner of Africa made 
+	this country a major hub for trading between Africa, Europre and Asia.
+</p>
+			
+<p>Cairo</p>
+<ul>
+	<li>Budget: $7 / day per person</li>
+	<li>Mid-Range: $21 /  day per person</li>
+	<li>High-Range: $61 / day per person</li>
+</ul>
+<p>Luxor</p>
+<ul>
+	<li>Budget: $8 / day per person</li>
+	<li>Mid-Range: $21 / day per person</li>
+	<li>High-End: $54 / day per person</li>
+</ul>
+<p>Alexandria</p>
+<ul>
+	<li>Budget: $8 / day per person</li>
+	<li>Mid-Range: $21 / day per person</li>
+	<li>High-End: $48 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Egypt</h1>
 <br>
 <h3>Places to Visit in Cairo</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/EgyptianMuseum.jpg" alt = "The Egyptian Museum">
-		<p>The Egyptian Museum</p>
+		<h4>The Egyptian Museum</h4>
+		<p>This museum contains the largest collection of pharaonic antiquities with over 120,000
+			items and is the largest museum in Africa.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/KhanEl-Khalili.jpg" alt = "Khan el-Khalili">
-		<p>Khan el-Khalili</p>
+		<h4>Khan el-Khalili</h4>
+		<p>This bazaar (marketplace) was established as the center of trade in the Mamluk era and 
+			contains many workshops that produce traditional crafts and souvenirs.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/SphinxOfGiza.jpg" alt = "Great Sphinx of Giza">
-		<p>Great Sphinx of Giza</p>
+		<h4>Great Sphinx of Giza</h4>
+		<p>This limestone statue is of a mythical creature with a human head and lion body. It is 
+			240 feet long and 66 feet tall.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Luxor</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/KarnakTemple.jpg" alt = "Karnak Temple">
-		<p>Karnak Temple</p>
+		<h4>Karnak Temple</h4>
+		<p>This complex consists of decayed temples, pylons, and chapels that were built starting as 
+			early as 1971-1926 BCE.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/ValleyOfKings.jpg" alt = "Valley of the Kings">
-		<p>Valley of the Kings</p>
+		<h4>Valley of the Kings</h4>
+		<p>This archaeological site was the burial site for all pharaohs from 1539-1075 BCE.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/HatshepsutTemple.jpg" alt = "Queen Hatshepsut Temple">
-		<p>Queen Hatshepsut Temple</p>
+		<h4>Queen Hatshepsut Temple</h4>
+		<p>This temple was built during the reign of Pharaoh Hatshepsut and is considered a masterpiece of 
+			ancient arhitecture.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Alexandria</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/AlexandriaLibrary.jpg" alt = "Alexandria Library">
-		<p>Alexandria Library</p>
+		<h4>Alexandria Library</h4>
+		<p>This was one of the largest libraries of the ancient world. It was a part of a research institute known 
+			as the Mouseion, dedicated to the nine goddesses of the arts.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Egypt/MontazaPalace.jpg" alt = "Montaza Palace">
-		<p>Montaza Palace</p>
+		<h4>Montaza Palace</h4>
+		<p>This palace was built in 1892 the last Muhammad Ali Dynasty ruler and overlooks the Mediterranean Sea.
+		</p>
 	</div>
 </div>
 </div>
