--- a/EnglandGuide.html
+++ b/EnglandGuide.html
@@ -188,35 +188,74 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About England</h1>
+<p>England was one of the first countries to undergo an Industrial Revolution and was the world's most industrialized 
+	country in the early 19th century. England has a population of over 68 million people and is separated from the 
+	rest of Europe by the North Sea and the English Channel. The land in England is mostly flat, with the exception
+	of the mountains in the north that are no higher than 1000 in elevation. 
+	</p>
+	
+<p>London</p>
+<ul>
+	<li>Budget: $66 / day per person</li>
+	<li>Mid-Range: $175 /  day per person</li>
+	<li>High-Range: $520 / day per person</li>
+</ul>
+<p>Birmingham</p>
+<ul>
+	<li>Budget: $55 / day per person</li>
+	<li>Mid-Range: $128 / day per person</li>
+	<li>High-End: $261 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in England</h1>
 <br>
 <h3>Places to Visit in London</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/England/BritishMuseum.jpg" alt = "The British Museum">
-		<p>The British Museum</p>
+		<h4>The British Museum</h4>
+		<p>This museum is dedicated to human history, art, and culture and contains about 
+			eight million works.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/England/LondonEye.jpg" alt = "London Eye">
-		<p>London Eye</p>
+		<h4>London Eye</h4>
+		<p>This is the largest cantilevered observation wheel in Europe, found on the South 
+			Bank of the River Thames. It is 443 feet tall and has a diameter of 394 feet 
+			and overlooks the west end of the Jubilee Gardens.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/England/HydePark.jpg" alt = "Hyde Park">
-		<p>Hyde Park</p>
+		<h4>Hyde Park</h4>
+		<p>This park is known for its holding of large rock concerts by artists such as Queen, 
+			Pink Floyd, and the Rolling Stones. It is also the largest of the Royal Parks in 
+			central London.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Birmingham</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/England/BirminghamBotanical.jpg" alt = "The Birmingham Botanical Garden">
-		<p>The Birmingham Botanical Garden</p>
+		<h4>The Birmingham Botanical Garden</h4>
+		<p>This garden features seven thousand different plants from all over the world and a 
+			collection of exotic birds.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/England/BirminghamLibrary.jpg" alt = "Library of Birmingham">
-		<p>Library of Birmingham</p>
+		<h4>Library of Birmingham</h4>
+		<p>This library was built to replace the Birmingham Central Library in September 2013 and 
+			is considered the largest public library in the United Kingdom.
+		</p>
+
 	</div>
 </div>
 </div>
