--- a/FranceGuide.html
+++ b/FranceGuide.html
@@ -188,43 +188,83 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About France</h1>
+<p>France is Europe’s most important agricultural producer with the country providing a geographic, economic and linguistic bridge that 
+	joins the northern and southern parts of the continent. This country has a population of about 66 million people. French culture 
+	has had a large influence on the development of art and science, particularly anthropology, sociology, and philosophy.
+	</p>
+	
+<p>Paris</p>
+<ul>
+	<li>Budget: $66 / day per person</li>
+	<li>Mid-Range: $175 /  day per person</li>
+	<li>High-Range: $520 / day per person</li>
+</ul>
+<p>Lyon</p>
+<ul>
+	<li>Budget: $55 / day per person</li>
+	<li>Mid-Range: $128 / day per person</li>
+	<li>High-End: $261 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in France</h1>
 <br>
 <h3>Places to Visit in Paris</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/Louvre.jpg" alt = "The Louvre">
-		<p>The Louvre</p>
+		<h4>The Louvre</h4>
+		<p>This is the world’s most visited museum and contains artworks and artifacts from 6th century 
+			BC to the 19th century, with its best known work being the Mona Lisa.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/EiffelTower.jpg" alt = "The Eiffel Tower">
-		<p>The Eiffel Tower</p>
+		<h4>The Eiffel Tower</h4>
+		<p>The Eiffel Tower stands at 1,083 feet tall and was built between the years 1887 and 1889. This 
+			tower was built to be the entrance gateway to the International Exposition.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/ArcDeTriomphe.jpg" alt = "Arc de Triomphe">
-		<p>Arc de Triomphe</p>
+		<h4>Arc de Triomphe</h4>
+		<p>This national monument took thirty years to build and is considered to be a large part of France’s 
+			national identity. Every year the Tour de France bicycle race ends near here.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/NotreDameCathedral.jpg" alt = "Notre Dame Cathedral">
-		<p>Notre Dame Cathedral</p>
+		<h4>Notre Dame Cathedral</h4>
+		<p>This cathedral is one of the most famous examples of French gothic architecture. It was finished being 
+			built in 1260 and was dedicated to the Virgin Mary.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Lyon</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/FineArtsMuseum.jpg" alt = "Museum of Fine Arts of Lyon">
-		<p>Museum of Fine Arts of Lyon</p>
+		<h4>Museum of Fine Arts of Lyon</h4>
+		<p>This art museum houses art from the time of ancient Egypt all the way to the modern period.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/ParcDeLaTete.jpg" alt = "Parc de la Tête d'Or">
-		<p>Parc de la Tete d'Or</p>
+		<h4>Parc de la Tete d'Or</h4>
+		<p>This 19th century park’s name translates to “Park of the Golden Head.” Boating takes place in the summer 
+			and the center of the park is a zoo that can be entered free of charge.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/France/SaintJeanBaptisteCathedral.jpg" alt = "Saint-Jean-Baptiste Cathedral">
-		<p>Saint-Jean-Baptiste Cathedral</p>
+		<h4>Saint-Jean-Baptiste Cathedral</h4>
+		<p>In December of each year Lyon holds the Festival of Lights where the people will place candles 
+			in the windows of this cathedral.
+		</p>
 	</div>
 </div>
 </div>
