--- a/GermanyGuide.html
+++ b/GermanyGuide.html
@@ -187,52 +187,102 @@
 	<!-- The chunk that will be on every page ends here -->
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Germany</h1>
+<p>Germany is a country that is mostly known for its beer. In this country you can find about 1,500 breweries where over
+	7,000 types of beer can be found. Germany has a population of about 85 million people. This country's total area 
+	is 357,592 square kilometers and about one-third of it is woodlands and forests.
+	</p>
+	
+<p>Munich</p>
+<ul>
+	<li>Budget: $53 / day per person</li>
+	<li>Mid-Range: $124 /  day per person</li>
+	<li>High-Range: $296 / day per person</li>
+</ul>
+<p>Berlin</p>
+<ul>
+	<li>Budget: $45 / day per person</li>
+	<li>Mid-Range: $118 / day per person</li>
+	<li>High-End: $322 / day per person</li>
+</ul>
+<p>Cologne</p>
+<ul>
+	<li>Budget: $61 / day per person</li>
+	<li>Mid-Range: $135 / day per person</li>
+	<li>High-End: $268 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Germany</h1>
 <br>
 <h3>Places to Visit in Munich</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/EnglishGarden.jpg" alt = "English Garden">
-		<p>English Garden</p>
+		<h4>English Garden</h4>
+		<p>This is the largest park in Munich, located in the center of the city. Its main attractions 
+			are the Monopteros, the Chinese Tower, and the Japanese Tower.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/AsamChurch.jpg" alt = "Asam Church">
-		<p>Asam Church</p>
+		<h4>Asam Church</h4>
+		<p>This church was built by the Asam brothers as their private church and is now one of the most 
+			important buildings of the German Late Baroque.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/HellabrunnZoo.jpg" alt = "Hellabrunn Zoo">
-		<p>Hellabrunn Zoo</p>
+		<h4>Hellabrunn Zoo</h4>
+		<p>This zoo features a high ratio of enclosures that are cageless, relying on moats to keep animals 
+			in place. This was the first zoo to be organized by geographical aspects rather than species.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Berlin</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/BerlinWallMem.jpg" alt = "Berlin Wall Memorial">
-		<p>Berlin Wall Memorial</p>
+		<h4>Berlin Wall Memorial</h4>
+		<p>A former board of the Berlin Wall that once separated the city of berlin now serves as a window 
+			of remembrance for visitors to see.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/BrandenburgGate.jpg" alt = "Brandenburg Gate">
-		<p>Brandenburg Gate</p>
+		<h4>Brandenburg Gate</h4>
+		<p>This neoclassic monument was built in the 18th century and is known as a symbol of the history 
+			of Germany and Europe as well as European unity.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Cologne</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/CologneCathedral.jpg" alt = "Cologne Cathedral">
-		<p>Cologne Cathedral</p>
+		<h4>Cologne Cathedral</h4>
+		<p>This cathedral is the largest gothic church in northern Europe at 515 feet tall.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/BelgianQuarter.jpg" alt = "Belgian Quarter">
-		<p>Belgian Quarter</p>
+		<h4>Belgian Quarter</h4>
+		<p>This area is located in the inner city district of Cologne features cuisine and 
+			is known as a meeting place for the creative arts.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Germany/LudwigMuseum.jpg" alt = "Ludwig Museum">
-		<p>Ludwig Museum</p>
+		<h4>Ludwig Museum</h4>
+		<p>This museum features modern art works from pop art, surrealism, and abstract. 
+			It also has one of the largest Picasso collections in Europe, as well as 
+			works by Andy Worhol and Roy Lichenstein.
+		</p>
 	</div>
 </div>
 
