--- a/GreeceGuide.html
+++ b/GreeceGuide.html
@@ -188,22 +188,43 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Greece</h1>
+<p>Greece being located on the Balkan Peninsula has influenced the country’s geography, with the main three elements of 
+	the country being mountains, the sea, and the lowlands. Greece's total area id 132,049 square kilometers and is 
+	comprised of over 2,000 islands that make up one-fifth of that total land area. 
+	</p>
+	
+<p>Athens</p>
+<ul>
+	<li>Budget: $45 / day per person</li>
+	<li>Mid-Range: $110 /  day per person</li>
+	<li>High-Range: $258 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Greece</h1>
 <br>
 <h3>Places to Visit in Athens</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Greece/Olympieion.jpg" alt = "Olympieion">
-		<p>Olympieion</p>
+		<h4>Olympieion</h4>
+		<p>Also known as the Temple of Zeus, this temple was built during the reign 
+			of the Athenian tyrants of 6th century BC.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Greece/AncientAcropolis.jpg" alt = "Ancient Acropolis">
-		<p>Ancient Acropolis</p>
+		<h4>Ancient Acropolis</h4>
+		<p>This is the most complete ancient Greek monumental complex that still exists.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Greece/NationalArchaeologicalMuseum.jpg" alt = "National Archaeological Museum">
-		<p>National Archaeological Museum</p>
+		<h4>National Archaeological Museum</h4>
+		<p>This museum is dedicated to ancient Greek art from prehistory to late antiquity.
+		</p>
 	</div>
 </div>
 <br>
