--- a/IndonesiaGuide.html
+++ b/IndonesiaGuide.html
@@ -188,26 +188,50 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Indonesia</h1>
+<p>Indonesia is the largest country in Southeast Asia. The maximum dimensions from east to west is 3,200 miles long and 1,100 
+	miles long from north to south with a total area of oer 1 million square kilometers. Indonesia has a population of over 278
+	million people and is known for its tropical beaches and religious temples.
+	</p>
+	
+<p>Bali</p>
+<ul>
+	<li>Budget: $21 / day per person</li>
+	<li>Mid-Range: $61 /  day per person</li>
+	<li>High-Range: $185 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Indonesia</h1>
 <br>
 <h3>Places to Visit in Bali</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Indonesia/WaterbomBali.jpg" alt = "Waterbom Bali">
-		<p>Waterbom Bali</p>
+		<h4>Waterbom Bali</h4>
+		<p>This water park has rides, restaurants, and swim-up bars.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Indonesia/UbudMonkeyForest.jpg" alt = "Ubud Monkey Forest">
-		<p>Ubud Monkey Forest</p>
+		<h4>Ubud Monkey Forest</h4>
+		<p>This sanctuary is home to three Hindu temples, 155 species of trees, and 
+			1,260 Balinese long-tailed macaque monkeys.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Indonesia/TirtaEmpul.jpg" alt = "Tirta Empul">
-		<p>Tirta Empul</p>
+		<h4>Tirta Empul</h4>
+		<p>This sacred water temple is famous for its holy water spring that Balinese
+			Hindus go to for ritual purification.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Indonesia/NyangNyangBeach.jpg" alt = "Nyang Nyang Beach">
-		<p>Nyang Nyang Beach</p>
+		<h4>Nyang Nyang Beach</h4>
+		<p>This beach on the southern coast of Bali is known for its white sand.
+		</p>
 	</div>
 </div>
 </div>
