--- a/ItalyGuide.html
+++ b/ItalyGuide.html
@@ -188,48 +188,92 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+	
+<h1>Some Facts About Italy</h1>
+<p>Italy is one of the world’s most important centers of religion, visual arts, literature, music, and culinary arts. 
+	Italian farms produce grapes, potatoes, sugar beets, soybeans, grain, and olives. In Italy you can find the Alps
+	which are the world’s most rugged mountains. 
+	</p>
+	
+<p>Rome</p>
+<ul>
+	<li>Budget: $54 / day per person</li>
+	<li>Mid-Range: $142 /  day per person</li>
+	<li>High-Range: $389 / day per person</li>
+</ul>
+<p>Venice</p>
+<ul>
+	<li>Budget: $76 / day per person</li>
+	<li>Mid-Range: $194 / day per person</li>
+	<li>High-End: $500 / day per person</li>
+</ul>
+<p>Naples</p>
+<ul>
+	<li>Budget: $46 / day per person</li>
+	<li>Mid-Range: $110 / day per person</li>
+	<li>High-End: $257 / day per person</li>
+</ul>
+	
 <h1>Popular Cities in Italy</h1>
 <br>
 <h3>Places to Visit in Rome</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/Colosseum.jpg" alt = "The Colosseum">
-		<p>The Colosseum</p>
+		<h4>The Colosseum</h4>
+		<p>The Colosseum was built between CE 70 and 72 during the reign of Flavian emperors as a 
+			gift to the Roman people that hosted gladiatorial games.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/TreviFountain.jpg" alt = "Trevi Fountain">
-		<p>Trevi Fountain</p>
+		<h4>Trevi Fountain</h4>
+		<p>This fountain stands 86 feet tall and 161.3 feet wide and is the largest Baroque fountain in the city.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/SistineChapel.jpg" alt = "Sistine Chapel">
-		<p>Sistine Chapel</p>
+		<h4>Sistine Chapel</h4>
+		<p>This mural painted by Michelangelo covers the whole altar wall of the Sistine Chapel.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Venice</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/RialtoBridge.jpg" alt = "Rialto Bridge">
-		<p>Rialto Bridge</p>
+		<h4>Rialto Bridge</h4>
+		<p>This is the oldest of the four bridges spanning the Grand Canal in Venice.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/GondolaTours.jpg" alt = "Gondola Tours">
-		<p>Gondola Tours</p>
+		<h4>Gondola Tours</h4>
+		<p>Gondolas are an iconic symbol of Venice, and with so many different routes 
+			to take they are good for sightseeing.
+		</p>
 	</div>
 </div>
 <br>
 <h3>Places to Visit in Naples</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/Pompeii.jpg" alt = "Pompeii">
-		<p>Pompeii</p>
+		<h4>Pompeii</h4>
+		<p>Pompeii was an ancient city that was buried under volcanic ash from the eruption 
+			of Mount Vesuvius in 79 AD. The city is now available to be toured with an 
+			archeologist.
+		</p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Italy/MountVesuvius.jpg" alt = "Mount Vesuvius">
-		<p>Mount Vesuvius</p>
+		<h4>Mount Vesuvius</h4>
+		<p>Learn to make Italian pizza in a pizza making workshop.
+		</p>
 	</div>
 </div>
 </div>
