--- a/JamaicaGuide.html
+++ b/JamaicaGuide.html
@@ -223,18 +223,22 @@
 	</div>
 	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
-		<h4></h4>
-		<p></p>
+		<h4>Bamboo RAfting in the Martha Brae River</h4>
+		<p>Ride on 30 feet long bamboo rafts through the Martha Brae River and learn about 
+			“The Legend of Martha Brae”.
+		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
-		<h4></h4>
-		<p></p>
+		<h4>Dunn's River Falls</h4>
+		<p>This waterfall is180 feet high and is terraced like giant natural stairs that can be climbed. 
+		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
-		<h4></h4>
-		<p></p>
+		<h4>Jungle Zip Lining</h4>
+		<p>Zipline through tropical forests and over mountain springs and rivers at 35 mph.
+		</p>
 	</div>
 </div>
 </div>
