--- a/MoroccoGuide.html
+++ b/MoroccoGuide.html
@@ -239,7 +239,10 @@
 	<div class = "1column">
 		<img src = "Images//" alt = "Azur Art and Spa">
         <h4>Azur Art and Spa</h4>
-		<p>This spa includes</p>
+		<p>This luxurious spa and wellness center offers a wide range of treatments, including massages, 
+			facials, and hammam rituals, in a tranquil serence environment. The center also houses a 
+			contemporary art gallery featuring works by local and international artists.
+		</p>
 	</div>
 	<div class = "1column">
 		<img src = "Images//" alt = "">
