--- a/MoroccoGuide.html
+++ b/MoroccoGuide.html
@@ -190,7 +190,14 @@
 <div class = "CountryList">
 
 	<h1>Some Facts about Morocco</h1>
-	<p></p>
+	<p>Morocco is a country located in North Africa, bordered by the Atlantic Ocean to the west 
+		and the Mediterranean Sea to the north. It is the world's largest exporter of phosphates 
+		and has a diverse economy that includes agriculture, manufacturing, and tourism. The official 
+		languages are Arabic and Berber, and French is also widely spoken. The population is predominantly 
+		Muslim, and the country has a rich cultural heritage that reflects its history as a crossroads of 
+		different civilizations. Moroccan cuisine is also known for its delicious flavors, with dishes such 
+		as tagine and couscous being popular around the world.
+	</p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
 	<p>Marrakech</p>
@@ -218,14 +225,14 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Morocco/" alt = "Koutoubia">
+		<img src = "Images/Morocco/Koutoubia.jpg" alt = "Koutoubia">
 		<h4>Koutoubia</h4>
         <p>This building is the largest Mosque in Morocco being 253 feet tall and is considered 
             a classic example of Moroccan Mosque architecture.
         </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "House of Photography in Marrakech">
+		<img src = "Images/Morocco/HouseOfPhotography.jpg" alt = "House of Photography in Marrakech">
         <h4>House of Photography in Marrakech</h4>
 		<p>This place features about 10,000 documents and vintage photographs from 1870 to 
             1960, with pictures of Moroccan landscapes, architecural complexes, and portraits.
@@ -237,7 +244,7 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images//" alt = "Azur Art and Spa">
+		<img src = "Images/Morocco/AzurArtSpa.jpeg" alt = "Azur Art and Spa">
         <h4>Azur Art and Spa</h4>
 		<p>This luxurious spa and wellness center offers a wide range of treatments, including massages, 
 			facials, and hammam rituals, in a tranquil serence environment. The center also houses a 
@@ -245,14 +252,33 @@
 		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Morocco/GalleryKasbah.jpg" alt = "Gallery Kasbah">
+        <h4>Gallery Kasbah</h4>
+		<p>This gallery includes eleven halls that showcase different artists with works in the style of 
+			realism, surrealism, abstract, and impressionism.
+		</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images//" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Morocco/MedinaEssaouira.jpg" alt = "Medina of Essaouira">
+        <h4>Medina of Essaouira</h4>
+		<p>This old 18th century town was an international trading seaport that linked Morocco to Europe.</p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Agadir</h3>
+<br>
+<div class = "row">
+	<div class = "1column">
+		<img src = "Images/Morocco/AgadirBeach.jpg" alt = "Agadir Beach">
+        <h4>Agadir Beach</h4>
+		<p>This beach with white sand has a built-in resort set on the mid-Atlantic coast.</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images/Morocco/Crocoparc.jpg" alt = "Crocoparc">
+        <h4>Crocoparc</h4>
+		<p>This crocodile park has 325 Nile crocodiles, giant tortoises, green iguanas, 
+			anacondas, and marmosets.
+		</p>
 	</div>
 </div>
 </div>
